--- a/src/assets/styles/sass/output.css
+++ b/src/assets/styles/sass/output.css
@@ -228,12 +228,9 @@ header .main-nav .desktop {
   align-items: center;
   position: relative;
 }
-header .main-nav .desktop #scroll-to-top {
-  display: none;
-}
 header .main-nav .desktop #hover-item-top {
   width: 0;
-  height: 100%;
+  height: 60%;
   position: absolute;
   z-index: -1;
   top: 50%;
@@ -341,6 +338,7 @@ header #scroll-to-top {
   bottom: 2.5rem;
   right: 2.5rem;
   z-index: 50;
+  opacity: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
